# neuralnetwork

./: .gitignore  README.md  init.json  main.py  neuralnetwork.py  nootbook.ipynb  pyproject.toml  self_main.ipynb  self_main.py
