[tool.poetry]
name = "neuralnetwork"
version = "0.1.0"
description = ""
authors = ["doberan <doberankei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "scipy"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pysen = {version = "0.9.1", extras = ["lint"]}
pytest = "^7.0.0"
pytest-mock = "^3.7.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
